# OptimizedMGP

./: .gitmodules  gradle.properties  keystore.jks  settings.gradle.kts
.github/workflows/: assemble_omg.yml
app/: build.gradle.kts
app/src/androidTest/java/com/fcl/plugin/mobileglues/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  optimizedmg_info_getter.cpp  optimizedmg_info_getter.h
app/src/main/java/com/fcl/plugin/mobileglues/: MainActivity.kt  showAppInfoDialog.kt  showMGGLInfoDialog.kt
app/src/main/java/com/fcl/plugin/mobileglues/settings/: MGConfig.kt
app/src/main/java/com/fcl/plugin/mobileglues/utils/: Constants.kt  ContextExtension.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
